--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 :root {
-  --background: #21201D;
-  --yellow: #D1A45B;
-  --blue: #2C8DD5;
+  --background: #E6E5DE;
+  --bg-dark: #ABA79D;
+  --green: #3DA517;
+  --blue: #0B4970;
   --mainFontFamily: 'Roboto-bold', sans-serif;
 }
 
@@ -13,23 +14,87 @@
 body {
   margin: 0;
   background-color: var(--background);
+  font-family: var(--mainFontFamily);
 }
 
 h1, h2, h3, h4 {
-  color: var(--yellow);
-  font-family: var(--mainFontFamily);
+  position: relative;
+  color: var(--green);
+  letter-spacing: .3rem;
+  text-transform: uppercase;
+}
+
+h1:after, h2:after {
+  content: '';
+  display: block;
+  height: 3px;
+  width: 4rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: .5rem;
+  background-color: var(--blue);
 }
 
 h1 {
   font-size: 3rem;
+  text-align: center;
+}
+
+h1 span {
+  color: var(--blue);
+}
+
+img {
+  width: 100%;
+  cursor: pointer;
+  transition: .2s;
+}
+
+img:hover {
+  transform: scale(1.2);
 }
 
 .wrapper {
+  padding-top: 4rem;
   max-width: 60rem;
   margin: 0 auto;
 }
 
+.class-list {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  background-color: var(--bg-dark);
+  list-style-type: none;
+  z-index: 999;
+}
+
+.class-list li {
+  padding: 1rem;
+  text-transform: uppercase;
+}
+
+.class-list li a {
+  color: var(--blue);
+  text-decoration: none;
+  transition: all .2s;
+}
+
+.class-list li a:hover {
+  color: var(--background);
+}
+
+.collection-overview {
+  text-align: center;
+}
+
 .collection-overview__card {
+  margin-top: 8rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
@@ -39,6 +104,11 @@ h1 {
   font-size: 1.5rem;
 }
 
-.collection-overview__card__img {
+.collection-overview__card__img, .collection-overview__card__img {
   width: 15rem;
+  height: 15rem;
+}
+
+.is-hidden {
+  display: none;
 }
