--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
   font-family: var(--mainFontFamily);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 h1, h2, h3, h4 {
   position: relative;
   color: var(--green);
@@ -28,7 +32,7 @@ h1:after, h2:after {
   content: '';
   display: block;
   height: 3px;
-  width: 4rem;
+  width: 10%;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -45,7 +49,18 @@ h1 span {
   color: var(--blue);
 }
 
+h2, article h1 {
+  color: var(--bg-dark);
+  font-size: 1.5rem;
+}
+
+h2:after, article h1:after {
+  background-color: var(--bg-dark);
+  width: 1rem
+}
+
 img {
+  position: relative;
   width: 100%;
   cursor: pointer;
   transition: .2s;
@@ -107,6 +122,90 @@ img:hover {
 .collection-overview__card__img, .collection-overview__card__img {
   width: 15rem;
   height: 15rem;
+}
+
+.card-details {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  min-height: 100vh;
+  margin: auto 0;
+  text-align: center;
+  background-color: var(--blue);
+  color: white;
+}
+
+.card-details img {
+  width: 33%;
+  min-width: 18rem;
+  max-width: 30rem;
+  background: radial-gradient(var(--green) 10%, var(--blue) 65%);
+}
+
+.card-details img:hover {
+  transform: unset;
+}
+
+.card-details section {
+  text-align: left;
+}
+
+.card-details hgroup {
+  text-align: center;
+  margin: 0 6rem;
+}
+
+.card-details hgroup h2 {
+  font-size: 1rem;
+}
+
+.card-details hgroup h3 {
+  text-transform: unset;
+  font-size: 2rem;
+  color: var(--background)
+}
+
+.card-details hgroup h2, .card-details hgroup h3 {
+  letter-spacing: unset;
+}
+
+.card-details dl {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 1rem 2rem 6rem;
+  border-top: 1px solid var(--background);
+  text-align: center;
+}
+
+dt {
+  padding-top: 3rem;
+  color: var(--bg-dark)
+}
+
+dd {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.return-link {
+  display: inline-block;
+  padding: 1rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: var(--background);
+  background-image: url('../images/icons/arrow.png');
+  background-position: left;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  border-radius: 0 3px 3px 0;
+  color: var(--blue);
+  text-decoration: none;
+  transition: all .2s;
+}
+
+.return-link:hover {
+  width: 5rem;
 }
 
 .is-hidden {
